--- a/src/assets/css/Home.css
+++ b/src/assets/css/Home.css
@@ -4,6 +4,20 @@
 	align-items: center;
 }
 
+.footer {
+	background-color: white;
+	width: 80%;
+	height: 10vh;
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-end;
+	text-align: center;
+	align-items: center;
+	font-size: 0.7em;
+	padding: 0;
+	margin-bottom: 0.5em;
+}
+
 .home {
 	display: flex;
 	align-items: center;
@@ -14,10 +28,12 @@
 
 .banner-img {
 	width: 50%;
+	margin-top: 4em;
 }
 
 .intro {
 	width: 50%;
+	margin-top: 4em;
 }
 
 .intro h1 {
@@ -39,6 +55,18 @@
 
 .my-work {
 	margin-top: 2em;
-	padding: 2em 1.5em;
+	padding: 1.75em 1.25em;
 	font-size: 1.2em;
+	color: purple;
+	border-color: purple;
 }
+.my-work:hover {
+	border-color: purple;
+	background-color: rgba(172, 0, 172, 0.146);
+}
+
+.fa-briefcase {
+	margin-right: 0.5em;
+	color: purple;
+}
+
